# Snake

./: .gitignore  CMakeLists.txt  README.md
src/: Food.cpp  Food.h  GameController.cpp  GameController.h  Snake.cpp  Snake.h  main.cpp
